apps/productivity/linkwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`linkwarden.internal.crussell.io`)
      kind: Rule
      services:
        - name: linkwarden
          port: 3000
